--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   </section>
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email : <a href="mailto:votre.email@example.com">votre.email@example.com</a></p>
+    <p>Email : <a href="mailto:mohammed.loudiyi@outlook.com">votre.email@example.com</a></p>
     <p>LinkedIn : <a href="https://linkedin.com/in/votreprofil" target="_blank">Votre Profil</a></p>
   </section>
   <footer>
