--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <p>LinkedIn : <a href="https://linkedin.com/in/votreprofil" target="_blank">Votre Profil</a></p>
   </section>
   <footer>
-    <p>&copy; 2024 Nom Prénom - Tous droits réservés</p>
+    <p>&copy; 2024 LOUDIYI Mohammed - Tous droits réservés</p>
   </footer>
 </body>
 </html>
