--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
   </section>
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email : <a href="mailto:mohammed.loudiyi@outlook.com">mohammed.loudiyi@outlook.com</a></p>
-    <p>LinkedIn : <a href="https://linkedin.com/in/votreprofil" target="_blank">Votre Profil</a></p>
+    <p>Email : <a href="mohammed.loudiyi@outlook.com">mohammed.loudiyi@outlook.com</a></p>
+    <p>LinkedIn : <a href="https://www.linkedin.com/in/mohammed-loudiyi-4a55376a/" target="_blank">Votre Profil</a></p>
   </section>
   <footer>
     <p>&copy; 2024 LOUDIYI Mohammed - Tous droits réservés</p>
