--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
       bottom: 0;
       width: 100%;
     }
+    /* Style pour les liens dans le footer et la section contact */
+    a {
+      color: #0056b3;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -86,7 +94,7 @@
   </section>
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email : <a href="mohammed.loudiyi@outlook.com">mohammed.loudiyi@outlook.com</a></p>
+    <p>Email : <a href="mailto:mohammed.loudiyi@outlook.com">mohammed.loudiyi@outlook.com</a></p>
     <p>LinkedIn : <a href="https://www.linkedin.com/in/mohammed-loudiyi-4a55376a/" target="_blank">Votre Profil</a></p>
   </section>
   <footer>
